--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 streamlit==1.53.0
 
-# PDF parsing
+# Gemini
+google-generativeai>=0.7.0
+
+# Vector DB
+pinecone>=3.0.0
+
+# PDF
 pypdf>=3.17.0
 
-# Tokenization / chunking
-tiktoken>=0.6.0
+# Tokenization
+tiktoken>=0.7.0
 
 # Core
 numpy>=1.26
@@ -12,14 +18,5 @@ pandas>=2.0
 requests>=2.31
 tenacity>=8.2
 
-# Vector DB
-pinecone>=3.0.0
-
-
-# LLMs
-google-generativeai>=0.7.0
-groq>=0.11.0
-
 # Utils
 python-dotenv>=1.0.0
-
